--- a/src/project/local_settings.py.template
+++ b/src/project/local_settings.py.template
@@ -16,7 +16,7 @@ EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 # information for the flavor.
 
 SHAREABOUTS = {
-  'FLAVOR': 'defaultflavor',
+  'FLAVOR': 'duwamish_flavor',
   'DATASET_ROOT': 'http://data.shareabouts.org/api/v2/demo-user/datasets/demo-data/',
   'DATASET_KEY': 'NTNhODE3Y2IzODlmZGZjMWU4NmU3NDhj',
 }
@@ -24,24 +24,24 @@ SHAREABOUTS = {
 # For geocoding...
 MAPQUEST_KEY = 'Fmjtd%7Cluur2g0bnl%2C25%3Do5-9at29u'
 
-# Unless you are running both the map and API locally, delete/comment out everything below. 
-
-# API settings
-DATABASES = {
-    'default': {
-        'ENGINE': 'django.contrib.gis.db.backends.postgis',
-        'NAME': 'shareabouts-old',
-        'USER': 'postgres',
-        'PASSWORD': 'postgres',
-        'HOST': 'localhost',
-        'PORT': '5432',
-    }
-}
-
-REST_FRAMEWORK = {
-    'PAGINATE_BY': 500,
-    'PAGINATE_BY_PARAM': 'page_size'
-}
-
-BROKER_URL = 'django://'
+## Unless you are running both the map and API locally, delete/comment out everything below.
+#
+## API settings
+#DATABASES = {
+#    'default': {
+#        'ENGINE': 'django.contrib.gis.db.backends.postgis',
+#        'NAME': 'shareabouts-old',
+#        'USER': 'postgres',
+#        'PASSWORD': 'postgres',
+#        'HOST': 'localhost',
+#        'PORT': '5432',
+#    }
+#}
+#
+#REST_FRAMEWORK = {
+#    'PAGINATE_BY': 500,
+#    'PAGINATE_BY_PARAM': 'page_size'
+#}
+#
+#BROKER_URL = 'django://'
 
