--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -31,11 +31,8 @@ languages:
 # Settings for map and layer configs
 map:
   geolocation_enabled: true
-  geolocation_onload: true
-
-#  geocoding_enabled: true
+  geolocation_onload: false
 #  geocode_field_label: _(Enter an address...)
-#  geocode_bounding_box: [47.000, -123.26, 47.92, -120.67] # south, west, north, east
   geocode_bounding_box: [46.500, -124, 48.5, -119] # south, west, north, east
 
   options:
@@ -50,8 +47,6 @@ map:
   layers:
 #      attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
       # SmarterCleanup Mapbox base layer:
-#    - url: //{s}.tiles.mapbox.com/v3/openplans.map-dmar86ym/{z}/{x}/{y}.png
-#    - url: //{s}.tiles.mapbox.com/v4/lukemswart.k8fnolpm/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibHVrZW1zd2FydCIsImEiOiJ5NTJPZHJFIn0.TgkkXaxWRS5fc3r0KFDrVQ
     - url: //{s}.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       visible: true
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
@@ -59,23 +54,16 @@ map:
   # Map Layers
 
      # Mapbox project freehand drawing imports
-#    - url: //a.tiles.mapbox.com/v4/lukemswart.k8fnolpm/features.json?access_token=pk.eyJ1IjoibHVrZW1zd2FydCIsImEiOiJ5NTJPZHJFIn0.TgkkXaxWRS5fc3r0KFDrVQ
     - url: //a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: json
       description: _(Early action cleanup sites)
       popupContent: '{{title}}'
       legend: true
       visible: true
-      title: _(Cleanup sites)
+      title: _(Early action sites)
       rules:
       # show nothing when zoomed out
         - condition: '"{{map.zoom}}" < 11'
-
-#          opacity: 0
-#          icon:
-#            opacity: 0
-#          style:
-#            opacity: 0
 
       # LineString
         - condition: '"{{geometry.type}}" == "LineString"'
@@ -148,11 +136,6 @@ map:
             iconAnchor: [15, 15]
 
         # default point marker case
-#        - condition: '{{map.view}} < 11 && "{{geometry.type}}" == "Point"'
-#          icon:
-#            iconUrl: /static/css/images/markers/dot-fa307d.png
-#            iconSize: [10, 10]
-#            iconAnchor: [5, 5]
         - condition: '"{{geometry.type}}" == "Point"'
           icon:
             iconUrl: /static/css/images/markers/dot-fa307d.png
@@ -168,7 +151,7 @@ map:
       legend: true
       opacity: 0.8
       description: <img src="/static/css/images/legend-EPA-ROD.png" alt="legend">
-      title: EPA ROD
+      title: Future cleanup plan
       visible: false
 
       # WMS landuse
@@ -570,4 +553,3 @@ pages:
   - title: _(Contribute)
     slug: contribute
     name: contribute
-
