--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -457,6 +457,8 @@ activity:
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
 
+  # Place Types
+
 place:
   adding_supported: true
   add_button_label: _(Add a report to the map!)
