--- a/src/flavors/raingardens/config.yml
+++ b/src/flavors/raingardens/config.yml
@@ -76,7 +76,7 @@ map:
 #      format: 'image/png'
 #      legend: true
 #      opacity: 0.6
-##      description: "_(key: <br>-The red area means more concrete coverage<br>-blue means water<br>-dark green means forested<br>-light green means grass or soil)"
+#      description: "_(key: <br>-The red area means more concrete coverage<br>-blue means water<br>-dark green means forested<br>-light green means grass or soil)"
 #      description: <img src="/static/css/images/legend-nlcd2011.png" alt="legend">
 #      title: _(Land covereage data)
 #      visible: false
@@ -90,45 +90,12 @@ map:
       url: /filter/raingarden
       external: true
       visible: true
-#    - title: _(Observations)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-observation.png
-#      url: /filter/observation
-#      external: true
-#      visible: true
-#    - title: _(Ideas)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-idea.png
-#      url: /filter/idea
-#      external: true
-#      visible: true
-#    - title: _(Questions)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-question.png
-#      url: /filter/question
-#      external: true
-#      visible: true
-#    - title: _(Complaints)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-complaint.png
-#      url: /filter/complaint
-#      external: true
-#      visible: true
-#    - title: _(Hide All)
-#      shareabouts: true
-#      url: /filter/none
-#      image: /static/css/images/hide-all.png
-#      external: true
-#      visible: true
-#    - title: _(Show All)
-#      shareabouts: true
-#      url: /
-#      image: /static/css/images/show-all.png
-#      external: true
-#      visible: true
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
+
+  # Icon Controls
+
 place_types:
   raingarden:
     label: _(raingarden)
@@ -164,25 +131,25 @@ place_types:
     rules:
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} < 11 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea.png
+          iconUrl: /static/css/images/markers/marker-idea-trans.png
           iconSize: [7, 12]
           iconAnchor: [5, 12]
 
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} < 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea.png
+          iconUrl: /static/css/images/markers/marker-idea-trans.png
           iconSize: [24, 29]
           iconAnchor: [12, 29]
 
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea.png
+          iconUrl: /static/css/images/markers/marker-idea-trans.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
       - condition: '"{{location_type}}" === "idea" && {{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea.png
+          iconUrl: /static/css/images/markers/marker-idea-trans.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [50, 60]
           iconAnchor: [25, 60]
@@ -198,10 +165,11 @@ sidebar:
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
-#  enabled: true
   enabled: false
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
+
+  # Place Types
 
 place:
   adding_supported: true
@@ -218,6 +186,16 @@ place:
   location_item_name: Address
 
   items:
+    - prompt: _(I am submitting a...)
+      type: select
+      options:
+        - label: _(Raingarden)
+          value: raingarden
+        - label: _(Idea for a raingarden)
+          value: idea
+      name: location_type
+      attrs:
+        - key: required
     - prompt: _(Raingarden Location)
       type: text
       name: private-garden_address
@@ -234,6 +212,43 @@ place:
       attrs:
         - key: placeholder
           value: _(Garden Name)
+        - key: size
+          value: 30
+    - prompt: _(Description)
+      type: textarea
+      name: description
+      optional: true
+      attrs:
+        - key: placeholder
+          value: _(Any notes you want to add for others would be wonderful :))
+    - prompt: _(Size)
+      type: text
+      name: size
+      optional: 
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Approximate square footage?)
+        - key: size
+          value: 30
+    - prompt: _(Designer)
+      type: text
+      name: submitter
+      optional: 
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Designed by?)
+        - key: size
+          value: 30
+    - prompt: _(Installer)
+      type: text
+      name: installer
+      optional: 
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Installed by?)
         - key: size
           value: 30
     - prompt: _(Contributor's name)
@@ -256,28 +271,11 @@ place:
           value: _(Your email address is kept private and will not be published)
         - key: size
           value: 30
-    - prompt: _(I am submitting a...)
-      type: select
-      options:
-        - label: _(Raingarden)
-          value: raingarden
-        - label: _(Idea for a raingarden)
-          value: idea
-      name: location_type
-      attrs:
-        - key: required
-    - prompt: _(Description)
-      type: textarea
-      name: description
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Please include the size, designer, and installer)
-    - prompt: _(Image)
-      inputfile_label: _(Add an Image)
+    - prompt:
+      inputfile_label: _(Please add an image)
       type: file
       name: my_image
-      optional: true
+      optional:
       attrs:
         - key: accept
           value: image/*
